only assign recent topics